# dofulator

./: .gitignore  AUTHORS.md  CMakeLists.txt  README.md  pyproject.toml
doc/: README.md  installation.md  usage.md
python/: CMakeLists.txt  pyproject.toml  setup.py
python/dofulator/: __init__.py  c_dofulator.pxd  c_dofulator.pyx  dofulator.pxd  dofulator.pyx  local_temperature.py  mda_dofulator.py
src/: atom_list.c  atom_list.h  bond_list.c  bond_list.h  cblas_lapacke.h.in  cblas_lapacke.in.h  compat.h  dofulator.c  dofulator.h  fragment.c  fragment.h  main.c  quaternion.h  vec3.h
src/frontend/: atom_list.c  atom_list.h  bond_list.c  bond_list.h  main.c  parse_molecule.c  parse_molecule.h
tests/: CMakeLists.txt
tests/frontend/: CMakeLists.txt  H2.dof  water.dof  water_rigid.dof  zigzag.dof  zigzag.xyz
tests/integration/: CMakeLists.txt  H2.xyz  basic_rigid.c  complex_flexible.c  complex_rigid.c  double_ring.dof  double_ring.xyz  flexible.c  integration_test.c  integration_test.h  water.dof  water.xyz  water_rigid.dof  water_rigid.xyz  zigzag_rigid.dof  zigzag_rigid.xyz
tests/python/: CMakeLists.txt  requirements.txt  test_mda.py
tests/python/data/1-methoxybicyclo[2.2.1]heptane/: .conformations.trr_offsets.npz  conformations.trr  geometry.gro
tests/python/data/benzene/: .traj.trr_offsets.npz  topol.gro  traj.trr
tests/python/data/ethane/: .traj.trr_offsets.npz  .traj_trimmed.trr_offsets.npz  topol.gro  traj.trr
tests/python/data/temperature/: README.md  benzene.atomic.npy  benzene.atomic.rigidangles.npy  benzene.atomic.rigidbodies.npy  benzene.atomic.rigidbonds.npy  benzene.atomic.rigidbonds.rigidangles.npy  benzene.directional.npy  benzene.directional.rigidangles.npy  benzene.directional.rigidbodies.npy  benzene.directional.rigidbonds.npy  benzene.directional.rigidbonds.rigidangles.npy  ethane.atomic.npy  ethane.atomic.rigidangles.npy  ethane.atomic.rigidbodies.npy  ethane.atomic.rigidbonds.npy  ethane.directional.npy  ethane.directional.rigidbodies.npy  ethane.directional.rigidbonds.npy  ethane.directional.rigidbonds.rigidangles.npy
tests/unit/: CMakeLists.txt  basic_rigid.c  complex_flexible.c  complex_rigid.c  flexible.c  quaternion.c  quaternion_methods.c  unit_test.c  unit_test.h
