[build-system]
requires = [
  "cython >= 0.28",
  # Builds against numpy 2.x are runtime-compatible with numpy 1.x
  "numpy>=2.0",
  "scikit-build-core >= 0.10",
  # Avoid msvc incompatibility by compiling with zig cc
  "ziglang==0.13.0.post1 ; platform_system == 'Windows'",
]
build-backend = "scikit_build_core.build"

[project]
name = "dofulator"
version = "0.0.1"
description = "Python interface to Dofulator for DoF calculation of atoms with rigid constraints"
dependencies = [
  'numpy>=1.23.2'
]

[project.optional-dependencies]
mdanalysis = [
  'MDAnalysis',
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build.targets = ["c_dofulator"]
ninja.make-fallback = false

[tool.scikit-build.cmake.define]
# Need int64_t atom tags for MDAnalysis compatibility
DOF_ATOM_TAG_TYPE = "int64_t"
# Build library only without frontend
DOF_LIBRARY_ONLY = "ON"
# Base library must be statically linked to cython library
DOF_SHARED_LIB = "OFF"
# Python components must be enabled
DOF_ENABLE_PYTHON = "ON"

# Enable zig cc in ziglang package of isolated build environment
[[tool.scikit-build.overrides]]
if.platform-system = "Windows"
inherit.cmake.define = "append"
cmake.define.DOF_USE_PY_ZIGLANG = "ON"

# Use zig cc from pre-installed ziglang package
[[tool.scikit-build.overrides]]
if.env.ZIGLANG_PATH = true
inherit.cmake.define = "append"
cmake.define.CMAKE_C_COMPILER = "zig;cc"

[tool.pytest.ini_options]
minversion = '6.0'
addopts = [
  '--import-mode=importlib',
]
pythonpath = 'python'
testpaths = [
  'tests/python',
]
